added conjunts,geometrycart,periemeter, statistics

--- a/Pages/areaOf.html
+++ b/Pages/areaOf.html
@@ -58,7 +58,7 @@
 
 
         <section class="main">
-            <article>
+            <article class="nav-methods">
 
                 <a href="">
                     <p>Metodos y funciones</p>
@@ -74,7 +74,7 @@
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
@@ -86,7 +86,7 @@
                         <li class="methods-element">statistic</li>
                     </a>
                     <a href="">
-                        <li class="methods-element">geometryAnalitic</li>
+                        <li class="methods-element">geometryCart</li>
                     </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
@@ -145,7 +145,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">square</span><span>(4)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 16 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 16 </span>
                         </p>
 
                     </div>
@@ -167,7 +167,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">circle</span><span>(6)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 113.097 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 113.097 </span>
                         </p>
 
                     </div>
@@ -188,7 +188,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">triangule</span><span>(4,7)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 14 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 14 </span>
                         </p>
 
                     </div>
@@ -212,7 +212,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">rectangule</span><span>(3,5)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 15 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 15 </span>
                         </p>
 
                     </div>
@@ -235,7 +235,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">rombo</span><span>(9,12)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 54 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 54 </span>
                         </p>
 
                     </div>
@@ -257,7 +257,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">trapecio</span><span>(4,7,8)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 32 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 32 </span>
                         </p>
 
                     </div>
@@ -280,7 +280,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">sphere</span><span>(9)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 1017.876 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 1017.876 </span>
                         </p>
 
                     </div>
@@ -302,7 +302,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">cube</span><span>(13)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 1014 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 1014 </span>
                         </p>
 
                     </div>
@@ -323,7 +323,7 @@
                                 class="method2">log</span><span>(<span class="keyword">areaOf</span><span>.</span><span
                                     class="method">cube</span><span>(14)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 339.481 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 339.481 </span>
                         </p>
 
                     </div>
