--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -55,7 +55,7 @@
         </a>
 
         <section class="main">
-            <article>
+            <article class="nav-methods">
 
                 <a href="">
                     <p>Metodos y funciones</p>
@@ -71,7 +71,7 @@
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
@@ -83,7 +83,7 @@
                         <li class="methods-element">statistic</li>
                     </a>
                     <a href="">
-                        <li class="methods-element">geometryAnalitic</li>
+                        <li class="methods-element">geometryCart</li>
                     </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
@@ -127,7 +127,7 @@
                 <h3>Metodos</h3>
                 <div class="method-container">
                     <p>
-                        <h6>ofArray.adition:</h4>
+                        <h6>ofArray.adition:</h6>
 
                             este metodo, recibe como parametro un arreglo y calcula la suma de todos los elementos de
                             este,
@@ -196,7 +196,7 @@
 
                 <div class="method-container">
                     <p>
-                        <h6>ofArray.generateArray:</h4>
+                        <h6>ofArray.generateArray:</h6>
 
                             este metodo, recibe como parametro un numero y genera un array con esa n cantidad de
                             elementos los cuales son numeros aleatorios.
