--- a/Pages/statistic.html
+++ b/Pages/statistic.html
@@ -21,11 +21,13 @@
 
         <header class="header">
 
+
             <div class="icon">
 
                 <a href="../index.html"><img src="../Sources/etjslogo.png" alt="" srcset="" width="50%"> </a>
 
             </div>
+
             <p class="init">Easy Tools JS</p>
 
             <nav class="header-nav">
@@ -54,7 +56,6 @@
             <i class="fa fa-rocket" aria-hidden="true"> ^ </i>
         </a>
 
-
         <section class="main">
             <article class="nav-methods">
 
@@ -68,7 +69,7 @@
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="">
+                    <a href="areaOf.html">
                         <li class="methods-element">areaOf</li>
                     </a>
 
@@ -122,18 +123,17 @@
                 </ul>
             </article>
             <article>
-                <h2>El objeto perimeterOf </h2>
-                <p>El objeto perimeterOf, consiste en un objeto con metodos para el calculo de perimetros de cualquier
-                    poligono y
-                    algunos solidos</p>
+                <h2>El objeto statistic </h2>
+                <p>El objeto statistic es un conjunto de elementos para calcular las distintas medidas estadisticas en
+                    base a datos ordenados los cuales se envian en forma de arraglo </p>
                 <h3>Metodos</h3>
+
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.square:</h6>
+                        <h6>statistic.media:</h6>
 
-                            Este metodo, recibe como parametro el lado de un cuadrado y calcula su perimetro aplicando
-                            la
-                            formula
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula la
+                            media estadistica de estos
 
                     </p>
 
@@ -141,10 +141,10 @@
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">square</span><span>(11)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">media</span><span>([3,5,67,45])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 44 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 30 </span>
                         </p>
 
                     </div>
@@ -152,12 +152,10 @@
 
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.triangule:</h6>
+                        <h6>statistic.average:</h6>
 
-                            Este metodo, recibe como parametros los 3 lados de un triangulo y calcula su perimetro
-                            aplicando
-                            la
-                            formula
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula la
+                            promedio estadistico de dichos datos.
 
                     </p>
 
@@ -165,22 +163,20 @@
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">triangule</span><span>(4,3,5)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">average</span><span>([14,98,103])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 12 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 71.66 </span>
                         </p>
 
                     </div>
                 </div>
-
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.circle:</h6>
+                        <h6>statistic.mediana:</h6>
 
-                            Este metodo, recibe como parametro el radio de un circulo y calcula su perimetro aplicando
-                            la
-                            formula
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula la
+                            mediana estadistica de dichos datos.
 
                     </p>
 
@@ -188,23 +184,20 @@
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">circle</span><span>(17)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">mediana</span><span>([9,11,5,12])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 106.814 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 10 </span>
                         </p>
 
                     </div>
                 </div>
-
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.rectangule:</h6>
+                        <h6>statistic.range:</h6>
 
-                            Este metodo, recibe como parametros la base y la altura de un rectangulo y calcula su
-                            perimetro aplicando
-                            la
-                            formula
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula el
+                            rango estadistico de dichos datos.
 
                     </p>
 
@@ -212,23 +205,20 @@
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">rectangule</span><span>(7,6)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">range</span><span>([12,89,8,17])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 26 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 81 </span>
                         </p>
 
                     </div>
                 </div>
-
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.cube:</h6>
+                        <h6>statistic.variance:</h6>
 
-                            Este metodo, recibe como parametros la altura, el largo y el ancho y calcula su perimetro
-                            aplicando
-                            la
-                            formula
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula la
+                            varianza de dichos datos.
 
                     </p>
 
@@ -236,46 +226,20 @@
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">cube</span><span>(11,5,9)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">variance</span><span>([17,23,85,9])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 100 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 2611.6 </span>
                         </p>
 
                     </div>
                 </div>
-
-
                 <div class="method-container">
                     <p>
-                        <h6>perimeterOf.shepere:</h6>
+                        <h6>statistic.standarDesviacion:</h6>
 
-                            Este metodo, recibe como parametro el radio de una esfera y calcula su perimetro aplicando
-                            la
-                            formula
-
-                    </p>
-
-                    <div class="coding">
-                        <p>
-                            <span class="keyword">console</span><span>.</span><span
-                                class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">shepere</span><span>(9)</span>)</span>
-                            <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 56.548 </span>
-                        </p>
-c
-                    </div>
-                </div>
-
-                <div class="method-container">
-                    <p>
-                        <h6>perimeterOf.nAgono:</h6>
-
-                            Este metodo calcula el perimetro de cualquier poligono, recibe como parametros un array con
-                            los diferentes lados del poligono, y otro el cual es el numero de aristas del poligono, solo
-                            acepta poligonos mayores a 4 lados, ya sean regulares o irregulares.
+                            Este metodo, recibe como parametro los datos agrupados en forma de arreglo y calcula la
+                            desviacion estandar de dichos datos.
 
                     </p>
 
@@ -283,17 +247,15 @@ c
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
-                                    class="keyword">perimeterOf</span><span>.</span><span
-                                    class="method">nAgono</span><span>([5,6,5,6],4)</span>)</span>
+                                    class="keyword">statistic</span><span>.</span><span
+                                    class="method">standarDesv</span><span>([9,76,12,3])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 22 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> 34.20 </span>
                         </p>
 
                     </div>
                 </div>
-            
             </article>
-
 
         </section>
 
@@ -304,8 +266,8 @@ c
 
         </footer>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 
 
