--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./Pages/perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
@@ -86,7 +86,7 @@
                         <li class="methods-element">statistic</li>
                     </a>
                     <a href="">
-                        <li class="methods-element">geometryAnalitic</li>
+                        <li class="methods-element">geometryCart</li>
                     </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
