--- a/Pages/model.html
+++ b/Pages/model.html
@@ -7,6 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../Css/styles.css">
     <link rel="stylesheet" href="../Css/responsive.css">
+    <link rel="stylesheet" href="../Css/tokensJs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Sources/etjslogo.png" type="image/x-icon">
@@ -50,9 +51,13 @@
         </header>
 
 
+        <a href="#" id="js_up" class="to-top">
+
+            <i class="fa fa-rocket" aria-hidden="true">   ^   </i>
+        </a>
 
         <section class="main">
-            <article>
+            <article class="nav-methods">
 
                 <a href="">
                     <p>Metodos y funciones</p>
@@ -60,11 +65,11 @@
 
                 <ul class="methods">
 
-                    <a href="./Pages/ofArray.html">
+                    <a href="ofArray.html">
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="">
+                    <a href="areaOf.html">
                         <li class="methods-element">areaOf</li>
                     </a>
 
@@ -80,7 +85,7 @@
                         <li class="methods-element">statistic</li>
                     </a>
                     <a href="">
-                        <li class="methods-element">geometryAnalitic</li>
+                        <li class="methods-element">geometryCart</li>
                     </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
